--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="col-md-7">
             <h3>Register With  <strong>Sri Lanka Music Therapy Association</strong></h3>
             <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p>
-            <form action="https://script.google.com/macros/s/AKfycbyFjcsfGQDxVY9ymJBFtdeP9h8-AB2MQ9DTQhdz7U2_EZ-YLt9ZTXXV7Jst0GTKzjRU/exec" method="post">
+            <form action="https://script.google.com/macros/s/AKfycby7ANBRNCw_TBwN7PXGmZXt-CwjI-8p6oekIrp_eU_aOByJPu1sOmgYew93vUxyb4ga/exec">
               <div class="form-group first">
                 <label for="username">Full name :</label>
                 <input type="text" class="form-control"  id="username">
