--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     
     
     <scriptc src="Google sheet.js">
+    <script src='index.js'>
 
     </scriptc>    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
