--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <textarea name="description" id="" cols="30" rows="10" placeholder="About Product" required></textarea>
 
             <button class="click">Submit &#10132;</button>
-            <!-- <input type="submit" class="click" placeholder="&#10132;"> -->
+            <<input type="submit" class="click" placeholder="&#10132;"> 
             
             <p style="  font-size: 10px; color: rgb(33, 33, 33); margin: 6px;">https//www.westools.online</p>
 
