--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 <body>
 	<div class="content">
         <center>
-        <form method="post" action="" name="product" id="product">
-            <h1>Submit Product</h1>
+        <form method="post" action="" name="Full name" id="product">
+            <h1>Enter your full name</h1>
             <p style="font-size: 10px;">https//www.westools.online</p>
             
             <label for="naem">Name*</label>
