--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <p style="font-size: 10px;">https//www.westools.online</p>
             
             <label for="naem">Name*</label>
-            <input class="fil" type="text" name="name" placeholder="Enter Product Name" required>
+            <input class="fil" type="text" name="Full name" placeholder="Enter your full name" required>
 
             <label for="naem">Rate*</label>
             <input class="fil" type="text" name="price" placeholder="Enter Free Or Paid" required>
