--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             <h1>Enter your full name</h1>
             <p style="font-size: 10px;">https//www.westools.online</p>
             
-            <label for="naem">Full Name</label>
-            <input class="fil" type="text" name="name" placeholder="Enter your full name" required>
+            <label for="naem">Name*</label>
+            <input class="fil" type="text" name="name" placeholder="Enter Product Name" required>
 
             <label for="naem">Name with initials</label>
             <input class="fil" type="text" name="price" placeholder="Enter Free Or Paid" required>
