--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@
             <h1>Sri Lanka Music Therapy Association</h1>
             <p style="font-size: 10px;">https//www.westools.online</p>
             
-            <label for="naem">Name*</label>
-            <input class="fil" type="text" name="name" placeholder="Enter Product Name" required>
+            <label for="naem">Full name</label>
+            <input class="fil" type="text" name="name" placeholder="Enter Full Name" required>
 
             <label for="naem">Name with initials</label>
-            <input class="fil" type="text" name="price" placeholder="Enter Free Or Paid" required>
+            <input class="fil" type="text" name="price" placeholder="Enter Name With initials" required>
 
-            <label for="naem">Product Link*</label>
-            <input class="fil" type="text" name="downloading link" placeholder="Product Downloading Link" required>
+            <label for="naem">Permenant Address</label>
+            <input class="fil" type="text" name="downloading link" placeholder="Enter permenent address" required>
 
-            <label for="naem">Product Demo</label>
-            <input class="fil" type="text" name="demo link" placeholder="Product Demo Link">
+            <label for="naem">Gramaniladhari Division</label>
+            <input class="fil" type="text" name="demo link" placeholder="Enter Gramaniladhari Division">
 
-            <label for="naem">Email*</label>
-            <input class="fil" type="text" name="email" placeholder="Enter Upi or Paypal" required>
+            <label for="naem">Divisional secratory</label>
+            <input class="fil" type="text" name="email" placeholder="Divisional secratory" required>
 
-            <label for="">Product Description*</label>
-            <textarea name="description" id="" cols="30" rows="10" placeholder="About Product" required></textarea>
+            <label for="">District</label>
+            <textarea name="description" id="" cols="30" rows="10" placeholder="Enter your District" required></textarea>
 
             <button class="click">Submit &#10132;</button>
             <input type="submit" class="click" placeholder="&#10132;">
