--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <label for="">District</label>
             <textarea name="description" id="" cols="30" rows="10" placeholder="Enter your District" required></textarea>
 
-            <button class="click">Submit &#10132;</button>
+            <!--<button class="click">Submit &#10132;</button>--!>
             <input type="submit" class="click" placeholder="&#10132;">
             
             <p style="  font-size: 10px; color: rgb(33, 33, 33); margin: 6px;">https//www.westools.online</p>
