--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
             <label for="naem">Name with initials</label>
             <input class="fil" type="text" name="price" placeholder="Enter Name With initials" required>
 
-            <label for="naem">Permenant Address</label>
+            <label for="naem">Permanent address</label>
             <input class="fil" type="text" name="downloading link" placeholder="Enter permenent address" required>
 
-            <label for="naem">Gramaniladhari Division</label>
+            <label for="naem">Grama Niladhari division</label>
             <input class="fil" type="text" name="demo link" placeholder="Enter Gramaniladhari Division">
 
-            <label for="naem">Divisional secratory</label>
+            <label for="naem">Divisional Secretary</label>
             <input class="fil" type="text" name="email" placeholder="Divisional secratory" required>
 
             <label for="">District</label>
